--- a/Tabang-Hub/Tabang-Hub/Views/_ViewStart.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/_ViewStart.cshtml
@@ -17,7 +17,7 @@
                 }
                 else if (roleName == "Admin")
                 {
-                    layout = "~/Views/Shared/_AdminLayout.cshtml"; // Assuming you have a layout for admin
+                    layout = "~/Views/Shared/_Admin.cshtml"; // Assuming you have a layout for admin
                 }
             }
         }
