--- a/Tabang-Hub/Tabang-Hub/Views/Admin/Index.cshtml
+++ b/Tabang-Hub/Tabang-Hub/Views/Admin/Index.cshtml
@@ -113,7 +113,7 @@
                                     <tr>
                                         <td>@org.email</td>
                                         <td>
-                                            <a href="@Url.Action("OrganizationAccounts", "Admin")" class="btn btn-sm btn-primary">View</a>
+                                            <a href="@Url.Action("ToConfirm", "Admin", new { userId = org.userId })" class="btn btn-sm btn-primary">View</a>
                                         </td>
                                     </tr>
                                 }
